Connections are stored in a Db...

--- a/NotifyMe/Pages/Demo.cshtml
+++ b/NotifyMe/Pages/Demo.cshtml
@@ -16,7 +16,7 @@
                 <div class="panel-heading" id="accordion">
                     <span class="glyphicon glyphicon-comment"></span> Chat
                     <div class="btn-group pull-right">
-
+                        <span id="onlinehost"></span>
                     </div>
                 </div>
                 <div class="panel-collapse collapse in" id="collapseOne">
