--- a/NotifyMe/wwwroot/css/site.css
+++ b/NotifyMe/wwwroot/css/site.css
@@ -42,30 +42,39 @@ body {
     padding: 0;
 }
 
-    .chat li {
-        margin-bottom: 10px;
-        padding-bottom: 5px;
-        border-bottom: 1px dotted #B3A9A9;
+.chat-img {
+    width:70px;
+    margin-right:15px;
+}
+
+    .chat-img .img-circle {
+        width:100%;
     }
 
-        .chat li.left .chat-body {
-            margin-left: 60px;
-        }
+.chat li {
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+}
 
-        .chat li.right .chat-body {
-            margin-right: 60px;
-        }
-
-
-        .chat li .chat-body p {
-            margin: 0;
-            color: #777777;
-            word-wrap:break-word;
-        }
-
-    .panel .slidedown .glyphicon, .chat .glyphicon {
-        margin-right: 5px;
+    .chat li.left .chat-body {
+        margin-left: 60px;
     }
+
+    .chat li.right .chat-body {
+        margin-right: 60px;
+    }
+
+
+    .chat li .chat-body p {
+        margin: 0;
+        color: #777777;
+        word-wrap: break-word;
+    }
+
+.panel .slidedown .glyphicon, .chat .glyphicon {
+    margin-right: 5px;
+}
 
 .panel-body {
     overflow-y: scroll;
