--- a/NotifyMe/Pages/Index.cshtml
+++ b/NotifyMe/Pages/Index.cshtml
@@ -26,11 +26,21 @@
 
     }
 }
-<h2>Hi,</h2>
+<pre>
+  _   _           _     _    __             __  __        
+ | \ | |         | |   (_)  / _|           |  \/  |       
+ |  \| |   ___   | |_   _  | |_   _   _    | \  / |   ___ 
+ | . ` |  / _ \  | __| | | |  _| | | | |   | |\/| |  / _ \
+ | |\  | | (_) | | |_  | | | |   | |_| |   | |  | | |  __/
+ |_| \_|  \___/   \__| |_| |_|    \__, |   |_|  |_|  \___|
+                                   __/ |                  
+                                  |___/                   
+</pre>
+
 @if (SignInManager.IsSignedIn(User))
 {
 
-
+    <h2>Hi</h2>
     <h3>Are you ready to talk with your visitors? Let's go... :)</h3>
     <div class="container">
         <div class="row">
