--- a/NotifyMe/Pages/Shared/_Layout.cshtml
+++ b/NotifyMe/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">NotifyMe</a>
+                <a asp-page="/Index" class="navbar-brand"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
