--- a/NotifyMe/Pages/Demo.cshtml
+++ b/NotifyMe/Pages/Demo.cshtml
@@ -40,6 +40,12 @@
     </div>
 </div>
 
+<button type="button" id="btnnotification" class="btn btn-primary hidden" data-toggle="modal" data-target="#centralModalInfo">
+</button>
+<div id="notificationdata"></div>
+
+
+
 
 
 
