--- a/NotifyMe/Pages/Notifications.cshtml
+++ b/NotifyMe/Pages/Notifications.cshtml
@@ -8,24 +8,10 @@
 {
     @if (SignInManager.IsSignedIn(User))
     {
-
+        <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=g4q2s6u0msl84m6htaw4ztm3by25re9sn4eiv07m907wbu6o"></script>
         <script type="text/javascript" src="~/js/chat.js"></script>
         <script>
-
-    
-
-    
-            
-            $(".arstatus").click(function () {
-               
-                $.ajax({
-                    url: '/',
-                    data: {
-                        status: $(this).data('status')
-                    }
-                })
-
-            });
+            tinymce.init({ selector:'textarea' });
         </script>
 
     }
@@ -48,18 +34,15 @@
                         <ul id="generalnotification" class="chat"></ul>
                     </div>
                     <div class="panel-footer">
-                        <div class="input-group">
+                        <div>
                             <input type="hidden" value="You" id="txtnotificationuser" />
-                            <input id="txtnotification" maxlength="250" type="text" class="form-control input-sm" placeholder="Type your message here..." />
-                            <div>
-                                <input id="txttitle" maxlength="250" type="text" class="form-control input-sm" placeholder="Type a title..." />
-                                <input id="txtlink" maxlength="250" type="text" class="form-control input-sm" placeholder="Type a link if exists..." />
-                            </div>
-                            <span class="input-group-btn">
-                                <button class="btn btn-warning btn-sm" id="btnsendnotification">
-                                    Send
-                                </button>
-                            </span>
+                     
+                            <input id="txttitle" maxlength="250" type="text" class="form-control input-sm" placeholder="Type a title..." />
+                            <input id="txtlink" maxlength="250" type="text" class="form-control input-sm" placeholder="Type a link if exists..." />
+                            <textarea id="txtnotification"></textarea>
+                                
+                            <button class="btn btn-warning btn-sm pull-right" id="btnsendnotification">Send</button>
+                       
                         </div>
                     </div>
                 </div>
