--- a/NotifyMe/Pages/Notifications.cshtml
+++ b/NotifyMe/Pages/Notifications.cshtml
@@ -8,15 +8,44 @@
 {
     @if (SignInManager.IsSignedIn(User))
     {
+
         <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=g4q2s6u0msl84m6htaw4ztm3by25re9sn4eiv07m907wbu6o"></script>
         <script type="text/javascript" src="~/js/chat.js"></script>
         <script>
-            tinymce.init({ selector:'textarea' });
+            $(document).ready( function () {
+                tinymce.init({ selector:'textarea' });
+                $('#notificationdata').DataTable({
+                    "processing": true,
+                    "serverSide": true,
+                    "searching":false,
+                    "ordering":false,
+                    "info":false,
+                    "lengthChange": false,
+                    "ajax":{
+                        url: "/Notifications?handler=AllNotifications",
+                        type:"GET"
+                    },
+                    "columns": [
+                        { 
+                            data: 'content',
+                            render: function ( data, type, row ) {
+                                return data;
+                                 }},
+                        { 
+                            data: 'date',
+                            render: function ( data, type, row ) {
+                                return data;
+                                 }},
+                        {
+                            data: 'id' 
+                            }
+                    ]
+                });
+            });
         </script>
 
     }
 }
-
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -24,13 +53,23 @@
                 <div class="panel-heading" id="notificationpanel">
                     <span class="glyphicon glyphicon-comment"></span> Notification Messages
                     <div class="btn-group pull-right">
-                        <a type="button" class="btn btn-default btn-xs" data-toggle="collapse" data-parent="#notificationpanel" href="#collapsenotification">
-                            <span class="glyphicon glyphicon-chevron-down"></span>
-                        </a>
+                       
                     </div>
                 </div>
                 <div class="panel-collapse collapse in" id="collapsenotification">
                     <div class="panel-body" id="notifications">
+                        <table id="notificationdata" class="table table-striped table-bordered compact notificationdata">
+                            <thead>
+                                <tr>
+                                    <th>Content</th>
+                                    <th>Date</th>
+                                    <th>Id</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                               <tr><td></td><td></td><td></td></tr>
+                            </tbody>
+                        </table>
                         <ul id="generalnotification" class="chat"></ul>
                     </div>
                     <div class="panel-footer">
@@ -50,4 +89,3 @@
         </div>
     </div>
 </div>
-<div id="summernote"></div>
