--- a/NotifyMe/Pages/Shared/_Layout.cshtml
+++ b/NotifyMe/Pages/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </environment>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+  
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -65,7 +67,7 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="~/lib/signalr/signalr.js"></script>
     </environment>
-
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>    
     @RenderSection("Scripts", required: false)
 </body>
 </html>
