--- a/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe/Pages/Chat.cshtml
@@ -27,10 +27,10 @@
 }
 @if (SignInManager.IsSignedIn(User))
 {
-
-    <h2>Hi</h2>
-    <h3>Are you ready to talk with your visitors? Let's go... :)</h3>
-    <div class="container">
+        <div class="container">
+        <pre>
+            Are you ready to talk with your visitors?            
+        </pre>
         <div class="row">
             <div class="col-md-12">
                 <div class="panel panel-primary">
