--- a/NotifyMe/Pages/Shared/_LoginPartial.cshtml
+++ b/NotifyMe/Pages/Shared/_LoginPartial.cshtml
@@ -2,11 +2,12 @@
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
+@inject NotifyMe.Services.VisitorService VisitorService
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            <li id="activeusers"><p class="radius">@VisitorService.GetActiveVisitorCount()</p></li>
             <li>
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
