--- a/NotifyMe/Pages/Shared/_MenuPartial.cshtml
+++ b/NotifyMe/Pages/Shared/_MenuPartial.cshtml
@@ -13,6 +13,7 @@
 }
         <li><a asp-page="/Demo">Demo</a></li>
     </ul>
-    <partial name="_LoginPartial" />
+    @await Html.PartialAsync("_LoginPartial")
+    
 </div>
 
