--- a/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -61,7 +61,7 @@
                     <div class="panel-heading" id="accordion">
                         <span class="glyphicon glyphicon-comment"></span> Chat
                         <div class="btn-group pull-right">
-                            <span id="onlinehost"></span>
+                            <span id="onlinehost">Offline</span>
                         </div>
                     </div>
                     <div class="panel-collapse collapse in" id="collapseOne">
