--- a/NotifyMe/Pages/Shared/_Layout.cshtml
+++ b/NotifyMe/Pages/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
-        <script src="~/lib/signalr/signalr.js"></script>
+        <script src="~/lib/signalr/signalr.min.js"></script>
     </environment>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>    
     @RenderSection("Scripts", required: false)
