--- a/NotifyMe/Pages/Notifications.cshtml
+++ b/NotifyMe/Pages/Notifications.cshtml
@@ -25,14 +25,14 @@
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-primary">
-                <div class="panel-heading" id="notificationpanel">
+                <div class="panel-heading" >
                     <span class="glyphicon glyphicon-comment"></span> Notification Messages
                     <div class="btn-group pull-right">
                        
                     </div>
                 </div>
-                <div class="panel-collapse collapse in" id="collapsenotification">
-                    <div class="panel-body" id="notifications">
+                <div class="panel-collapse collapse in">
+                    <div class="panel-body" >
                         <table id="notificationdata" class="table table-striped table-bordered compact notificationdata">
                             <thead>
                                 <tr>
