--- a/NotifyMe/Pages/Users.cshtml
+++ b/NotifyMe/Pages/Users.cshtml
@@ -30,12 +30,14 @@
                             <thead>
                                 <tr>
                                     <th>User</th>
-                                    <th>Date</th>
+                                    <th>Connection Date</th>
+                                    <th>Disconnection Date</th>
                                     <th>Is Connected</th>
+                                    <th>Connected From</th>
                                 </tr>
                             </thead>
                             <tbody>
-                               <tr><td></td><td></td><td></td></tr>
+                               <tr><td></td><td></td><td></td><td></td><td></td></tr>
                             </tbody>
                         </table>
                         <ul id="generalnotification" class="chat"></ul>
