--- a/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -50,7 +50,7 @@
             
 
                     <div class="container-login100-form-btn">
-                        <button type="submit" class="btn btn-info btn-sm login100-form-btn">Login</button>
+                       <button type="submit" class="btn btn-info btn-sm login100-form-btn"> <span class="glyphicon glyphicon-log-in"></span></button>
                     </div>
                     
                     
