--- a/NotifyMe/Pages/Shared/_LoginPartial.cshtml
+++ b/NotifyMe/Pages/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link"><span class="glyphicon glyphicon-log-out"></span> Logout</button>
             </li>
         </ul>
     </form>
