--- a/NotifyMe/Pages/Shared/_LoginPartial.cshtml
+++ b/NotifyMe/Pages/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-@inject NotifyMe.Services.VisitorService VisitorService
+@inject NotifyMe.Services.IVisitorService VisitorService
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
