--- a/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -81,11 +81,14 @@
                         </div>
                     </div>
                 </div>
+                
+
             </div>
 
         </div>
     </div>
 </div>
+				<div id="notifypopup"></div>
 @section Scripts {
     <script type="text/javascript" src="~/js/chat.js"></script>
 }
