--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -90,5 +90,11 @@
 </div>
 				<div id="notifypopup"></div>
 @section Scripts {
-    <script type="text/javascript" src="~/js/chat.js"></script>
+        <environment include="Development">
+            <script type="text/javascript" src="~/js/chat.js"></script>
+        </environment>
+        
+        <environment exclude="Development">
+            <script type="text/javascript" src="~/js/chat.min.js"></script>
+        </environment>
 }
