--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -14,7 +14,7 @@
             <section>
                 <form class="login100-form validate-form" method="POST">
                     <span class="login100-form-title p-b-43">
-                        Login to continue - Docker Test
+                        #Login to continue#
                     </span>
                    <div class="p-b-20">
                         <div asp-validation-summary="All" class="text-danger"></div>
