--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -59,8 +59,10 @@
             <div class="login100-more p-t-150 p-r-40 p-l-40" style="background-image: url('/images/Login.jpg');">
                 <div class="panel panel-primary ">
                     <div class="panel-heading" id="accordion">
-                        <span class="glyphicon glyphicon-comment"></span> Chat
-                        <div class="btn-group pull-right">
+                        
+                        <span class="chat-img pull-left\"><img src="@Model.ImageUrl" style="width: 40px;
+    margin-right: 15px;" alt="User" class="img-circle" /></span>
+                        <div class="pull-right p-t-10">
                             <span id="onlinehost">Offline</span>
                         </div>
                     </div>
