--- a/NotifyMe.Solution/NotifyMe/Pages/Shared/_MenuPartial.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Shared/_MenuPartial.cshtml
@@ -10,6 +10,7 @@
 {
         <li><a asp-page="/Notifications"><span class="glyphicon glyphicon-bullhorn"></span> Notify</a></li>
         <li><a asp-page="/Chat"><span class="glyphicon glyphicon-comment"></span> Chat</a></li>
+        <li><a asp-page="/Templates"><span class="glyphicon glyphicon-file"></span> Templates</a></li>
 }
  
     </ul>
