--- a/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
@@ -62,14 +62,16 @@
                         </div>
                     </div>
                 </div>
+            </div>                    
+            <div style="margin:5px 5px">
+                <button class="btn btn-success arstatus" data-status="Online" id="btnonline">Online</button>
+                <button class="btn btn-danger arstatus" data-status="Busy" id="btnbusy">Busy</button>
+                <button class="btn btn-warning arstatus" data-status="Away" id="btnaway">Away</button>
+                <button class="btn btn-default arstatus" data-status="Offline" id="btnoffline">Offline</button>
             </div>
             <div class="col-md-7">
                 <div class="panel panel-primary">
-                    <div style="margin:5px 5px">
-                        <button class="btn btn-success arstatus" data-status="Online" id="btnonline">Online</button>
-                        <button class="btn btn-danger arstatus" data-status="Busy" id="btnbusy">Busy</button>
-                        <button class="btn btn-warning arstatus" data-status="Away" id="btnaway">Away</button>
-                    </div>
+
                     <div class="panel-heading" id="accordion">
                         <span class="glyphicon glyphicon-comment"></span> Chat
                         <div class="btn-group pull-right">
