--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -57,13 +57,15 @@
                 </form>   
             </section>
             <div class="login100-more p-t-150 p-r-40 p-l-40" style="background-image: url('/images/Login.jpg');">
-                <div class="panel panel-primary ">
+                <div class="panel panel-info ">
                     <div class="panel-heading" id="accordion">
-                        
-                        <span class="chat-img pull-left\"><img src="@Model.ImageUrl" style="width: 40px;
-    margin-right: 15px;" alt="User" class="img-circle" /></span>
-                        <div class="pull-right p-t-10">
-                            <span id="onlinehost">Offline</span>
+                        <div id="chatheader" class="chat-header offline">
+                            <span class="chat-img pull-left\">
+                                <img src="@Model.ImageUrl" style="width: 40px;margin-right: 15px;" alt="User" class="img-circle" />This is @Model.Username 
+                            </span>
+                            <div class="pull-right p-t-10">
+                                <span id="onlinehost">Offline</span>
+                            </div>
                         </div>
                     </div>
                     <div class="panel-collapse collapse in" id="collapseOne">
