--- a/NotifyMe.Solution/NotifyMe/Pages/Templates.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Templates.cshtml
@@ -14,6 +14,24 @@
 </pre>
 <div class="container">
     <div class="row">
+         <div class="col-md-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading" id="accordion">
+                        <span class="glyphicon glyphicon-file"></span> Templates
+                        <div class="btn-group pull-right">
+                            
+                        </div>
+                    </div>
+                    <div class="panel-collapse collapse in">
+                        <div class="panel-body" style="height: 100%;" >
+
+                        </div>
+                        <div class="panel-footer">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         <div class="col-md-6">
                 <div class="panel panel-primary">
                     <div class="panel-heading" id="accordion">
