Template as sercive

--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="~/css/util.css">
 <link rel="stylesheet" type="text/css" href="~/css/main.css">
-
+<link rel="stylesheet" type="text/css" href="~/css/chat.css">
 <div class="limiter" style="margin-top:-55px">
     <div class="container-login100">
         <div class="wrap-login100">
