--- a/NotifyMe.Solution/NotifyMe/Pages/Notifications.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Notifications.cshtml
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="~/js/notification.js"></script>
     }
 }
-
+<link rel="stylesheet" type="text/css" href="~/css/chat.css">
 <div class="container">
     <pre>
         You can instantly send notifications to your web page to display custom messages to your real-time visitors.
