--- a/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
@@ -31,6 +31,7 @@
 
     }
 }
+<link rel="stylesheet" type="text/css" href="~/css/chat.css">
 @if (SignInManager.IsSignedIn(User))
 {
         <div class="container">
