--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -56,7 +56,7 @@
                     
                 </form>   
             </section>
-            <div class="login100-more p-t-150 p-r-40 p-l-40" style="background-image: url('/images/Login.jpg');">
+            <div class="login100-more p-t-150 p-r-40 p-l-40">
                 <div class="panel panel-info ">
                     <div class="panel-heading" id="accordion">
                         <div id="chatheader" class="chat-header offline">
