--- a/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
@@ -13,9 +13,11 @@
         
         <environment include="Development">
             <script type="text/javascript" src="~/js/chat.js"></script>
+            <script type="text/javascript" src="~/js/chat.admin.js"></script>
         </environment>
          <environment exclude="Development">
-              <script type="text/javascript" src="~/js/chat.min.js"></script>
+            <script type="text/javascript" src="~/js/chat.min.js"></script>
+            <script type="text/javascript" src="~/js/chat.admin.min.js"></script>
         </environment>
         <script>           
             $(".arstatus").click(function () {
@@ -83,12 +85,13 @@
                     </div>
                     <div class="panel-collapse collapse in" id="collapseOne">
                         <div class="panel-body" id="chatcontent">
-                            <ul id="messagesList" class="chat">
+                            <ul id="messagesList" class="chat admin">
                                 @if(Model.Messages!=null)
                                 {
+                                    
                                     @foreach (var message in Model.Messages)
                                     {
-                                        <li>@message.Content</li>
+                                        <li>@Html.Raw(message)</li>
                                     }
                                 }
                             </ul>
