--- a/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
@@ -10,7 +10,7 @@
 {
     @if (SignInManager.IsSignedIn(User))
     {
-        
+        <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=g4q2s6u0msl84m6htaw4ztm3by25re9sn4eiv07m907wbu6o"></script>
         <environment include="Development">
             <script type="text/javascript" src="~/js/chat.js"></script>
             <script type="text/javascript" src="~/js/chat.admin.js"></script>
@@ -72,7 +72,7 @@
                 <button class="btn btn-warning arstatus" data-status="Away" id="btnaway">Away</button>
                 <button class="btn btn-default arstatus" data-status="Offline" id="btnoffline">Offline</button>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-10">
                 <div class="panel panel-primary">
 
                     <div class="panel-heading" id="accordion">
@@ -97,14 +97,14 @@
                             </ul>
                         </div>
                         <div class="panel-footer">
-                            <div class="input-group">
+
+                            <div >                                
                                 <input type="hidden" value="You" id="txtuser" />
-                                <input id="txtmessage" maxlength="250" type="text" class="form-control input-sm" placeholder="Type your message here..." />
-                                <span class="input-group-btn">
-                                    <button class="btn btn-warning btn-sm" id="btnsendmessage">
-                                        Send
-                                    </button>
-                                </span>
+                                <input id="txtmessage" maxlength="250" disabled type="text" class="form-control input-sm disabled"  />
+                                <textarea id="txtusermessage" placeholder="Type your message here..."></textarea>
+                                <button class="btn btn-warning btn-sm text-right p-t-8" id="btnhostmessage">
+                                    Send
+                                </button>                               
                             </div>
                         </div>
                     </div>
