--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -10,4 +10,5 @@
         <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a id="external-login" asp-page="./ExternalLogins">External logins</a></li>
     }
     <li class="@ManageNavPages.PersonalDataNavClass(ViewContext)"><a asp-page="./PersonalData">Personal data</a></li>
+    <li class=""><a asp-page="./Identity/Account/Manage/AccessKeys">Access Keys</a></li>
 </ul>
