--- a/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
@@ -12,13 +12,14 @@
     {
         <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=g4q2s6u0msl84m6htaw4ztm3by25re9sn4eiv07m907wbu6o"></script>
         <environment include="Development">
-            <script type="text/javascript" src="~/js/chat.js"></script>
-            <script type="text/javascript" src="~/js/chat.admin.js"></script>
+            <script type="text/javascript" src="~/js/chat.js" asp-append-version="true"></script>
+            <script type="text/javascript" src="~/js/chat.admin.js" asp-append-version="true"></script>
         </environment>
-         <environment exclude="Development">
-            <script type="text/javascript" src="~/js/chat.min.js"></script>
-            <script type="text/javascript" src="~/js/chat.admin.min.js"></script>
-        </environment>
+        <environment exclude="Development">
+            <script type="text/javascript" src="~/js/chat.min.js" asp-append-version="true"></script>
+            <script type="text/javascript" src="~/js/chat.admin.min.js" asp-append-version="true"></script>
+            
+         </environment>
         <script>           
             $(".arstatus").click(function () {
                 $.ajax({
@@ -37,80 +38,36 @@
 @if (SignInManager.IsSignedIn(User))
 {
         <div class="container">
-        <pre>
-            Are you ready to talk with your visitors?            
-        </pre>
         <div class="row">
-            <div class="col-md-2">
-                <div class="panel panel-primary">
-                    <div class="panel-heading" id="accordion">
-                        <span class="glyphicon glyphicon-user"></span> Users
-                        <div class="btn-group pull-right">
-                            
-                        </div>
+            <div class="col-md-6">
+        <div class="container text-left">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-6" role="tabpanel">
+                    <div class="col-xs-4 col-sm-12">
+                        <ul class="nav nav-justified" id="nav-tabs" role="tablist">
+                           
+                        </ul>
                     </div>
-                    <div class="panel-collapse collapse in">
-                        <div class="panel-body" style="height: 100%;" >
-                            <ul id="userslist" class="chat" >
-                            @if(Model.Users!=null){
-                               @foreach (var user in Model.Users)
-                                {
-                                    <li ><a asp-page="/Chat" asp-page-handler='UserChat' asp-route-userId="@user.Id">@user.UserName</a></li>
-                                }
-                            }
-                            </ul>
+                    <div class="col-xs-8 col-sm-12">
+                        <div class="tab-content" id="tabs-collapse">            
+                           
                         </div>
-                        <div class="panel-footer">
-
-                        </div>
-                    </div>
-                </div>
-            </div>                    
-            <div style="margin:5px 5px">
-                <button class="btn btn-success arstatus" data-status="Online" id="btnonline">Online</button>
-                <button class="btn btn-danger arstatus" data-status="Busy" id="btnbusy">Busy</button>
-                <button class="btn btn-warning arstatus" data-status="Away" id="btnaway">Away</button>
-                <button class="btn btn-default arstatus" data-status="Offline" id="btnoffline">Offline</button>
-            </div>
-            <div class="col-md-10">
-                <div class="panel panel-primary">
-
-                    <div class="panel-heading" id="accordion">
-                        <span class="glyphicon glyphicon-comment"></span> Chat
-                        <div class="btn-group pull-right">
-                            <a type="button" class="btn btn-default btn-xs" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                <span class="glyphicon glyphicon-chevron-down"></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="panel-collapse collapse in" id="collapseOne">
-                        <div class="panel-body" id="chatcontent">
-                            <ul id="messagesList" class="chat admin">
-                                @if(Model.Messages!=null)
-                                {
-                                    
-                                    @foreach (var message in Model.Messages)
-                                    {
-                                        <li>@Html.Raw(message)</li>
-                                    }
-                                }
-                            </ul>
-                        </div>
-                        <div class="panel-footer">
-
-                            <div >                                
-                                <input type="hidden" value="You" id="txtuser" />
-                                <input id="txtmessage" maxlength="250" disabled type="text" class="form-control input-sm disabled"  />
-                                <textarea id="txtusermessage" placeholder="Type your message here..."></textarea>
-                                <button class="btn btn-warning btn-sm text-right p-t-8" id="btnhostmessage">
-                                    Send
-                                </button>                               
-                            </div>
-                        </div>
-                    </div>
+                    </div>        
                 </div>
             </div>
-
+        </div>
+        </div>
+            <div class="col-md-6">
+                <div style="margin-top:100px">                                
+                    <input id="txtmessage" maxlength="250" disabled type="text" class="form-control input-sm disabled hidden"  />
+                    <textarea id="txtusermessage" placeholder="Type your message here..."></textarea>
+                    <span class="input-group-btn" style="text-align:right;padding-top:5px">
+                        <button class="btn btn-warning btn-sm text-right p-t-8" id="btnhostmessage">
+                            Send
+                        </button>
+                    </span>                               
+                </div>
+            </div>
         </div>
     </div>
 }
