--- a/NotifyMe.Solution/NotifyMe/Pages/Shared/_Layout.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Shared/_Layout.cshtml
@@ -51,7 +51,8 @@
 {
         <hr />
         <footer>
-            <p>&copy; 2018 - NotifyMe</p>
+            
+            <p>&copy; 2018 - NotifyMe -- @ViewData["Version"]</p>
         </footer>
 }
     </div>
@@ -76,8 +77,9 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
-        <script src="~/lib/signalr/signalr.min.js" asp-append-version="true"></script>
+        <script src="~/lib/signalr/signalr.min.js" asp-append-version="true"></script>        
     </environment>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>    
     @RenderSection("Scripts", required: false)
 </body>
